--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,19 @@ body {
   background: #232323;
 }
 
-h1, span {
+h1 {
   color: white;
 }
 
 #container {
   margin: 0 auto;
   max-width: 600px;
+}
+
+#stripe {
+  background-color: white;
+  height: 30px;
+  text-align: center;
 }
 
 .square {
