--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,28 @@ h1 {
   padding: 20px 0;
 }
 
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+  transition: all 0.3s;
+}
+
+button:hover {
+  color: white;
+  background-color: steelblue;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
+}
+
 #colorDisplay {
   font-size: 200%;
 }
@@ -39,5 +61,6 @@ h1 {
 }
 
 .selected {
-  background: blue;
+  color: white;
+  background: steelblue;
 }
