--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ button {
   letter-spacing: 1px;
   font-size: inherit;
   transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
 }
 
 button:hover {
@@ -42,7 +44,7 @@ button:hover {
 }
 
 #container {
-  margin: 0 auto;
+  margin: 20px auto;
   max-width: 600px;
 }
 
@@ -58,6 +60,10 @@ button:hover {
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
+  border-radius: 15%;
+  transition: background 0.6s;
+  -webkit-transition: background 0.6s;
+  -moz-transition: background 0.6s;
 }
 
 .selected {
